<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:visibility="gone"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp"
        android:background="@color/white"
        android:layout_marginHorizontal="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/ref_blue"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                app:endIconDrawable="@drawable/visible_password"
                app:passwordToggleEnabled="true">
                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_login"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="V_1.1"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginEnd="20dp"

            />
    </LinearLayout>




</RelativeLayout>