<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<include layout="@layout/layout_toolbar"
    android:id="@+id/layoutToolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_customer_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_new_retailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/et_new_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_customer_name"
                android:paddingStart="20dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:paddingEnd="20dp"
                android:paddingVertical="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:maxLength="70"
                android:background="@android:color/transparent"/>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_marginStart="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <ImageButton
                    android:id="@+id/ib_refresh"
                    android:layout_width="24dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="18dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_location"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_address"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingVertical="15dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    android:background="@android:color/transparent"/>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/cb_add_geo_tagging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add this address as geo tagging address"/>


            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_city"
                android:paddingStart="20dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:paddingEnd="20dp"
                android:paddingVertical="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:maxLength="70"
                android:background="@android:color/transparent"/>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_phone_number"
                android:paddingStart="20dp"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:paddingEnd="20dp"
                android:paddingVertical="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:maxLength="70"
                android:background="@android:color/transparent"
                tools:ignore="TextFields" />


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_email_id"
                android:paddingStart="20dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:paddingEnd="20dp"
                android:paddingVertical="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:maxLength="70"
                android:background="@android:color/transparent"/>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Organization Name"
                    android:layout_marginStart="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"

                    />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp">

                    <EditText
                        android:id="@+id/et_organization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter The Organization Name"
                        android:paddingStart="20dp"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:paddingEnd="20dp"
                        android:paddingVertical="15dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:importantForAutofill="no"
                        android:maxLength="70"
                        android:background="@android:color/transparent"/>


                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Source Of Lead"
                    android:layout_marginStart="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"

                    />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_source_of_lead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                   >

                    <TextView
                        android:id="@+id/tv_source_of_lead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Select the Source Of Lead"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingVertical="15dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:importantForAutofill="no"
                        android:maxLength="70"
                        android:background="@android:color/transparent"
                        tools:ignore="TextFields" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_others"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/tv_other_source_of_lead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter the Source of lead"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingVertical="15dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:importantForAutofill="no"
                        android:maxLength="70"
                        android:background="@android:color/transparent"
                        tools:ignore="TextFields" />


                </androidx.cardview.widget.CardView>
            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PAN Card Number"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pannumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/et_pannumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_pan_number"
                android:paddingStart="20dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:paddingEnd="20dp"
                android:paddingVertical="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:maxLength="70"
                android:background="@android:color/transparent"/>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GST No"
            android:layout_marginStart="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_gstno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/et_gstno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_gst_no"
                android:paddingStart="20dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:paddingEnd="20dp"
                android:paddingVertical="15dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:maxLength="70"
                android:background="@android:color/transparent"/>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:backgroundTint="@color/dark_blue"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>